--- a/AlgUndDat/nbproject/project.properties
+++ b/AlgUndDat/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=warteschlage.Warteschlage
+main.class=warteschlange.Warteschlange
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
